# CampusEvents

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  README.md  SOURCES.md  TESTING.md  pyproject.toml  source_registry.yaml
campus_events/: __init__.py  cli.py  config.py  dedupe.py  delivery.py  fetchers.py  filters.py  models.py  parsers.py  pipeline.py  registry.py  render.py
campus_events.egg-info/: SOURCES.txt
tests/: test_config.py  test_delivery.py  test_fetchers.py  test_parsers_directory.py  test_parsers_filtered_cards.py  test_parsers_live_fixtures.py  test_parsers_live_payloads.py  test_parsers_museum.py  test_parsers_osa.py  test_parsers_remaining.py  test_parsers_rss.py  test_pipeline.py  test_registry.py
tests/fixtures/: FIXTURE_PLAN.md  ntu_cceb_events_live_2026-03-16.json  ntu_cceb_seminars_sample_2026-03-16.html  ntu_cee_news_events_live_2026-03-16.html  ntu_erian_events_live_2026-03-16.json  ntu_erian_news_events_sample_2026-03-16.html  ntu_event_detail_listing_sample_2026-03-16.html  ntu_ias_events_live_2026-03-16.json  ntu_mae_events_live_2026-03-16.json  ntu_main_events_live_2026-03-16.json  ntu_main_events_sample_2026-03-16.html  ntu_museum_exhibitions_live_2026-03-16.html  ntu_museum_exhibitions_sample_2026-03-16.html  ntu_sbs_events_live_2026-03-16.html  ntu_scelse_all_events_sample_2026-03-16.html  nus_arts_festival_sample_2026-03-16.html  nus_baba_house_sample_2026-03-16.html  nus_coe_rss_arts_sample_2026-03-16.xml  nus_coe_rss_directory_sample_2026-03-16.html  nus_museum_sample_2026-03-16.html  (+9 more)
